More bugs solved
Solved:
-Use of "match" function. I Included D_TH inside it. Now it returns 0 or
1.
-Put ALPHA as a parameter for the mog function. That way we don't have
to compile it every time we change ALPHA.
-Created the background image as the average of the BG gaussians.

NOTICED BUG:
All the weights are 0.33 all the time

--- a/codegen/mex/mog/html/mog1_watch.html
+++ b/codegen/mex/mog/html/mog1_watch.html
@@ -12,31 +12,31 @@
 </tr>
 </thead>
 <tbody onmouseover="watchMouseOver(event);" onmouseout="watchMouseOut(event);" onclick="watchClick(event);">
-<tr class="var type1" id="S2T50">
+<tr class="var type1" id="S2T43">
 <td id="blank"></td><td>1</td>
 <td id=""><a href="#">foreground</a></td>
-<td>Output</td><td class="watchsize" id="30"><b>:</b>? x <b>:</b>?</td>
+<td>Output</td><td class="watchsize" id="31"><b>:</b>? x <b>:</b>?</td>
 <td class="watchclass">double</td>
 <td class="watchcomplex">No</td>
 </tr>
 <tr class="var type1" id="S3T1">
 <td id="blank"></td><td>2</td>
 <td id=""><a href="#">background &gt; 1</a></td>
-<td>Local</td><td class="watchsize" id="31"><b>:</b>? x <b>:</b>? x <b>:</b>?</td>
+<td>Local</td><td class="watchsize" id="32"><b>:</b>? x <b>:</b>? x <b>:</b>?</td>
 <td class="watchclass">double</td>
 <td class="watchcomplex">No</td>
 </tr>
-<tr class="var type1" id="S3T51">
+<tr class="var type1" id="S3T50">
 <td id="blank"></td><td>3</td>
 <td id=""><a href="#">background &gt; 2</a></td>
-<td>Output</td><td class="watchsize" id="31"><b>:</b>? x <b>:</b>? x <b>:</b>?</td>
+<td>Output</td><td class="watchsize" id="32"><b>:</b>? x <b>:</b>? x <b>:</b>?</td>
 <td class="watchclass">uint8</td>
 <td class="watchcomplex">No</td>
 </tr>
 <tr class="var type1" id="S4T1">
 <td id="blank"></td><td>4</td>
 <td id=""><a href="#">image</a></td>
-<td>Input</td><td class="watchsize" id="31"><b>:</b>? x <b>:</b>? x <b>:</b>?</td>
+<td>Input</td><td class="watchsize" id="32"><b>:</b>? x <b>:</b>? x <b>:</b>?</td>
 <td class="watchclass">double</td>
 <td class="watchcomplex">No</td>
 </tr>
@@ -47,213 +47,234 @@
 <td class="watchclass">double</td>
 <td class="watchcomplex">No</td>
 </tr>
-<tr class="var type1 struct" id="S6T15">
-<td class="collapsible"><a class="collapsed" href="#" /></td><td>6</td>
+<tr class="var type1" id="S6T3">
+<td id="blank"></td><td>6</td>
+<td id=""><a href="#">alpha</a></td>
+<td>Input</td><td class="watchsize" id="4">1 x 1</td>
+<td class="watchclass">double</td>
+<td class="watchcomplex">No</td>
+</tr>
+<tr class="var type1 struct" id="S7T15">
+<td class="collapsible"><a class="collapsed" href="#" /></td><td>7</td>
 <td id=""><a href="#">models</a></td>
-<td>Persistent</td><td class="watchsize" id="30"><b>:</b>? x <b>:</b>?</td>
+<td>Persistent</td><td class="watchsize" id="31"><b>:</b>? x <b>:</b>?</td>
 <td class="watchclass">struct</td>
 <td class="watchcomplex">-</td>
 </tr>
-<tr class="var type1 S6T15 field" id="S6T15F1">
-<td id="blank"></td><td>6.1</td>
+<tr class="var type1 S7T15 field" id="S7T15F1">
+<td id="blank"></td><td>7.1</td>
 <td id=""><a class="field" id="1" href="#">models.weight</a></td>
-<td>Field</td><td class="watchsize" id="22">3 x 1</td>
+<td>Field</td><td class="watchsize" id="23">3 x 1</td>
 <td class="watchclass">double</td>
 <td class="watchcomplex">No</td>
 </tr>
-<tr class="var type1 S6T15 field" id="S6T15F2">
-<td id="blank"></td><td>6.2</td>
+<tr class="var type1 S7T15 field" id="S7T15F2">
+<td id="blank"></td><td>7.2</td>
 <td id=""><a class="field" id="1" href="#">models.mu</a></td>
-<td>Field</td><td class="watchsize" id="29"><b>:</b>? x 3</td>
+<td>Field</td><td class="watchsize" id="30"><b>:</b>? x 3</td>
 <td class="watchclass">double</td>
 <td class="watchcomplex">No</td>
 </tr>
-<tr class="var type1 S6T15 field" id="S6T15F3">
-<td id="blank"></td><td>6.3</td>
+<tr class="var type1 S7T15 field" id="S7T15F3">
+<td id="blank"></td><td>7.3</td>
 <td id=""><a class="field" id="1" href="#">models.sigma</a></td>
-<td>Field</td><td class="watchsize" id="22">3 x 1</td>
+<td>Field</td><td class="watchsize" id="23">3 x 1</td>
 <td class="watchclass">double</td>
 <td class="watchcomplex">No</td>
 </tr>
-<tr class="var type1" id="S7T3">
-<td id="blank"></td><td>7</td>
-<td id=""><a href="#">M</a></td>
-<td>Local</td><td class="watchsize" id="4">1 x 1</td>
-<td class="watchclass">double</td>
-<td class="watchcomplex">No</td>
-</tr>
-<tr class="var type1" id="S9T3">
+<tr class="var type1" id="S8T3">
 <td id="blank"></td><td>8</td>
-<td id=""><a href="#">N</a></td>
+<td id=""><a href="#">M</a></td>
 <td>Local</td><td class="watchsize" id="4">1 x 1</td>
 <td class="watchclass">double</td>
 <td class="watchcomplex">No</td>
 </tr>
 <tr class="var type1" id="S10T3">
 <td id="blank"></td><td>9</td>
-<td id=""><a href="#">C</a></td>
+<td id=""><a href="#">N</a></td>
 <td>Local</td><td class="watchsize" id="4">1 x 1</td>
 <td class="watchclass">double</td>
 <td class="watchcomplex">No</td>
 </tr>
 <tr class="var type1" id="S11T3">
 <td id="blank"></td><td>10</td>
-<td id=""><a href="#">K</a></td>
+<td id=""><a href="#">C</a></td>
 <td>Local</td><td class="watchsize" id="4">1 x 1</td>
 <td class="watchclass">double</td>
 <td class="watchcomplex">No</td>
 </tr>
 <tr class="var type1" id="S12T3">
 <td id="blank"></td><td>11</td>
-<td id=""><a href="#">T</a></td>
+<td id=""><a href="#">K</a></td>
 <td>Local</td><td class="watchsize" id="4">1 x 1</td>
 <td class="watchclass">double</td>
 <td class="watchcomplex">No</td>
 </tr>
-<tr class="var type1" id="S17T3">
+<tr class="var type1" id="S13T3">
 <td id="blank"></td><td>12</td>
-<td id=""><a href="#">m</a></td>
+<td id=""><a href="#">T</a></td>
 <td>Local</td><td class="watchsize" id="4">1 x 1</td>
 <td class="watchclass">double</td>
 <td class="watchcomplex">No</td>
 </tr>
 <tr class="var type1" id="S18T3">
 <td id="blank"></td><td>13</td>
+<td id=""><a href="#">m</a></td>
+<td>Local</td><td class="watchsize" id="4">1 x 1</td>
+<td class="watchclass">double</td>
+<td class="watchcomplex">No</td>
+</tr>
+<tr class="var type1" id="S19T3">
+<td id="blank"></td><td>14</td>
 <td id=""><a href="#">n</a></td>
 <td>Local</td><td class="watchsize" id="4">1 x 1</td>
 <td class="watchclass">double</td>
 <td class="watchcomplex">No</td>
 </tr>
-<tr class="var type1" id="S19T26">
-<td id="blank"></td><td>14</td>
-<td id=""><a href="#">X</a></td>
-<td>Local</td><td class="watchsize" id="28"><b>:</b>? x 1</td>
-<td class="watchclass">double</td>
-<td class="watchcomplex">No</td>
-</tr>
-<tr class="var type1" id="S21T12">
+<tr class="var type1" id="S20T26">
 <td id="blank"></td><td>15</td>
-<td id=""><a href="#">prevWeight</a></td>
-<td>Local</td><td class="watchsize" id="22">3 x 1</td>
+<td id=""><a href="#">X</a></td>
+<td>Local</td><td class="watchsize" id="29"><b>:</b>? x 1</td>
 <td class="watchclass">double</td>
 <td class="watchcomplex">No</td>
 </tr>
-<tr class="var type1" id="S22T13">
+<tr class="var type1" id="S22T12">
 <td id="blank"></td><td>16</td>
-<td id=""><a href="#">prevMu</a></td>
-<td>Local</td><td class="watchsize" id="29"><b>:</b>? x 3</td>
+<td id=""><a href="#">prevWeight</a></td>
+<td>Local</td><td class="watchsize" id="23">3 x 1</td>
 <td class="watchclass">double</td>
 <td class="watchcomplex">No</td>
 </tr>
-<tr class="var type1" id="S23T12">
+<tr class="var type1" id="S23T13">
 <td id="blank"></td><td>17</td>
-<td id=""><a href="#">prevSigma</a></td>
-<td>Local</td><td class="watchsize" id="22">3 x 1</td>
+<td id=""><a href="#">prevMu</a></td>
+<td>Local</td><td class="watchsize" id="30"><b>:</b>? x 3</td>
 <td class="watchclass">double</td>
 <td class="watchcomplex">No</td>
 </tr>
-<tr class="var type1 struct" id="S24T11">
-<td class="collapsible"><a class="collapsed" href="#" /></td><td>18</td>
+<tr class="var type1" id="S24T12">
+<td id="blank"></td><td>18</td>
+<td id=""><a href="#">prevSigma</a></td>
+<td>Local</td><td class="watchsize" id="23">3 x 1</td>
+<td class="watchclass">double</td>
+<td class="watchcomplex">No</td>
+</tr>
+<tr class="var type1 struct" id="S25T11">
+<td class="collapsible"><a class="collapsed" href="#" /></td><td>19</td>
 <td id=""><a href="#">modelX</a></td>
 <td>Local</td><td class="watchsize" id="4">1 x 1</td>
 <td class="watchclass">struct</td>
 <td class="watchcomplex">-</td>
 </tr>
-<tr class="var type1 S24T11 field" id="S24T11F1">
-<td id="blank"></td><td>18.1</td>
+<tr class="var type1 S25T11 field" id="S25T11F1">
+<td id="blank"></td><td>19.1</td>
 <td id=""><a class="field" id="1" href="#">modelX.weight</a></td>
-<td>Field</td><td class="watchsize" id="22">3 x 1</td>
+<td>Field</td><td class="watchsize" id="23">3 x 1</td>
 <td class="watchclass">double</td>
 <td class="watchcomplex">No</td>
 </tr>
-<tr class="var type1 S24T11 field" id="S24T11F2">
-<td id="blank"></td><td>18.2</td>
+<tr class="var type1 S25T11 field" id="S25T11F2">
+<td id="blank"></td><td>19.2</td>
 <td id=""><a class="field" id="1" href="#">modelX.mu</a></td>
-<td>Field</td><td class="watchsize" id="29"><b>:</b>? x 3</td>
+<td>Field</td><td class="watchsize" id="30"><b>:</b>? x 3</td>
 <td class="watchclass">double</td>
 <td class="watchcomplex">No</td>
 </tr>
-<tr class="var type1 S24T11 field" id="S24T11F3">
-<td id="blank"></td><td>18.3</td>
+<tr class="var type1 S25T11 field" id="S25T11F3">
+<td id="blank"></td><td>19.3</td>
 <td id=""><a class="field" id="1" href="#">modelX.sigma</a></td>
-<td>Field</td><td class="watchsize" id="22">3 x 1</td>
+<td>Field</td><td class="watchsize" id="23">3 x 1</td>
 <td class="watchclass">double</td>
 <td class="watchcomplex">No</td>
 </tr>
-<tr class="var type1" id="S26T12">
-<td id="blank"></td><td>19</td>
-<td id=""><a href="#">weight</a></td>
-<td>Local</td><td class="watchsize" id="22">3 x 1</td>
-<td class="watchclass">double</td>
-<td class="watchcomplex">No</td>
-</tr>
-<tr class="var type1" id="S27T13">
+<tr class="var type1" id="S27T12">
 <td id="blank"></td><td>20</td>
-<td id=""><a href="#">mu</a></td>
-<td>Local</td><td class="watchsize" id="29"><b>:</b>? x 3</td>
+<td id=""><a href="#">weight</a></td>
+<td>Local</td><td class="watchsize" id="23">3 x 1</td>
 <td class="watchclass">double</td>
 <td class="watchcomplex">No</td>
 </tr>
-<tr class="var type1" id="S28T12">
+<tr class="var type1" id="S28T13">
 <td id="blank"></td><td>21</td>
-<td id=""><a href="#">sigma</a></td>
-<td>Local</td><td class="watchsize" id="22">3 x 1</td>
+<td id=""><a href="#">mu</a></td>
+<td>Local</td><td class="watchsize" id="30"><b>:</b>? x 3</td>
 <td class="watchclass">double</td>
 <td class="watchcomplex">No</td>
 </tr>
-<tr class="var type1" id="S30T12">
+<tr class="var type1" id="S29T12">
 <td id="blank"></td><td>22</td>
-<td id=""><a href="#">ratio</a></td>
-<td>Local</td><td class="watchsize" id="22">3 x 1</td>
+<td id=""><a href="#">sigma</a></td>
+<td>Local</td><td class="watchsize" id="23">3 x 1</td>
 <td class="watchclass">double</td>
 <td class="watchcomplex">No</td>
 </tr>
 <tr class="var type1" id="S31T12">
 <td id="blank"></td><td>23</td>
-<td id=""><a href="#">w</a></td>
-<td>Local</td><td class="watchsize" id="22">3 x 1</td>
+<td id=""><a href="#">ratio</a></td>
+<td>Local</td><td class="watchsize" id="23">3 x 1</td>
 <td class="watchclass">double</td>
 <td class="watchcomplex">No</td>
 </tr>
 <tr class="var type1" id="S32T12">
 <td id="blank"></td><td>24</td>
-<td id=""><a href="#">index</a></td>
-<td>Local</td><td class="watchsize" id="22">3 x 1</td>
+<td id=""><a href="#">w</a></td>
+<td>Local</td><td class="watchsize" id="23">3 x 1</td>
 <td class="watchclass">double</td>
 <td class="watchcomplex">No</td>
 </tr>
-<tr class="var type1" id="S34T12">
+<tr class="var type1" id="S33T12">
 <td id="blank"></td><td>25</td>
-<td id=""><a href="#">sumB</a></td>
-<td>Local</td><td class="watchsize" id="22">3 x 1</td>
+<td id=""><a href="#">index</a></td>
+<td>Local</td><td class="watchsize" id="23">3 x 1</td>
 <td class="watchclass">double</td>
 <td class="watchcomplex">No</td>
 </tr>
-<tr class="var type1" id="S36T3">
+<tr class="var type1" id="S35T12">
 <td id="blank"></td><td>26</td>
+<td id=""><a href="#">sumB</a></td>
+<td>Local</td><td class="watchsize" id="23">3 x 1</td>
+<td class="watchclass">double</td>
+<td class="watchcomplex">No</td>
+</tr>
+<tr class="var type1" id="S37T3">
+<td id="blank"></td><td>27</td>
 <td id=""><a href="#">B</a></td>
 <td>Local</td><td class="watchsize" id="4">1 x 1</td>
 <td class="watchclass">double</td>
 <td class="watchcomplex">No</td>
 </tr>
-<tr class="var type1" id="S38T52">
-<td id="blank"></td><td>27</td>
-<td id=""><a href="#">bgIndexes</a></td>
-<td>Local</td><td class="watchsize" id="33"><b>:</b>3 x 1</td>
-<td class="watchclass">double</td>
-<td class="watchcomplex">No</td>
-</tr>
-<tr class="var type1" id="S39T52">
+<tr class="var type1" id="S39T51">
 <td id="blank"></td><td>28</td>
-<td id=""><a href="#">matchingIndex</a></td>
-<td>Local</td><td class="watchsize" id="33"><b>:</b>3 x 1</td>
+<td id=""><a href="#">bgIndexes</a></td>
+<td>Local</td><td class="watchsize" id="35"><b>:</b>3 x 1</td>
 <td class="watchclass">double</td>
 <td class="watchcomplex">No</td>
 </tr>
-<tr class="var type1" id="S42T53">
+<tr class="var type1" id="S40T51">
 <td id="blank"></td><td>29</td>
+<td id=""><a href="#">bgWeights</a></td>
+<td>Local</td><td class="watchsize" id="35"><b>:</b>3 x 1</td>
+<td class="watchclass">double</td>
+<td class="watchcomplex">No</td>
+</tr>
+<tr class="var type1" id="S41T52">
+<td id="blank"></td><td>30</td>
+<td id=""><a href="#">bgMu</a></td>
+<td>Local</td><td class="watchsize" id="33"><b>:</b>? x <b>:</b>3</td>
+<td class="watchclass">double</td>
+<td class="watchcomplex">No</td>
+</tr>
+<tr class="var type1" id="S43T51">
+<td id="blank"></td><td>31</td>
+<td id=""><a href="#">matchingIndex</a></td>
+<td>Local</td><td class="watchsize" id="35"><b>:</b>3 x 1</td>
+<td class="watchclass">double</td>
+<td class="watchcomplex">No</td>
+</tr>
+<tr class="var type1" id="S46T53">
+<td id="blank"></td><td>32</td>
 <td id=""><a href="#">matching</a></td>
-<td>Local</td><td class="watchsize" id="32"><b>:</b>1 x 1</td>
+<td>Local</td><td class="watchsize" id="34"><b>:</b>1 x 1</td>
 <td class="watchclass">double</td>
 <td class="watchcomplex">No</td>
 </tr>
