--- a/codegen/mex/mog/html/match134_watch.html
+++ b/codegen/mex/mog/html/match134_watch.html
@@ -12,31 +12,31 @@
 </tr>
 </thead>
 <tbody onmouseover="watchMouseOver(event);" onmouseout="watchMouseOut(event);" onclick="watchClick(event);">
-<tr class="var type1" id="S2T12">
+<tr class="var type1" id="S2T37">
 <td id="blank"></td><td>1</td>
 <td id=""><a href="#">D</a></td>
-<td>Output</td><td class="watchsize" id="22">3 x 1</td>
-<td class="watchclass">double</td>
-<td class="watchcomplex">No</td>
+<td>Output</td><td class="watchsize" id="23">3 x 1</td>
+<td class="watchclass">logical</td>
+<td class="watchcomplex">-</td>
 </tr>
 <tr class="var type1" id="S3T26">
 <td id="blank"></td><td>2</td>
 <td id=""><a href="#">X</a></td>
-<td>Input</td><td class="watchsize" id="28"><b>:</b>? x 1</td>
+<td>Input</td><td class="watchsize" id="29"><b>:</b>? x 1</td>
 <td class="watchclass">double</td>
 <td class="watchcomplex">No</td>
 </tr>
 <tr class="var type1" id="S4T13">
 <td id="blank"></td><td>3</td>
 <td id=""><a href="#">mu</a></td>
-<td>Input</td><td class="watchsize" id="29"><b>:</b>? x 3</td>
+<td>Input</td><td class="watchsize" id="30"><b>:</b>? x 3</td>
 <td class="watchclass">double</td>
 <td class="watchcomplex">No</td>
 </tr>
 <tr class="var type1" id="S5T12">
 <td id="blank"></td><td>4</td>
 <td id=""><a href="#">sigma</a></td>
-<td>Input</td><td class="watchsize" id="22">3 x 1</td>
+<td>Input</td><td class="watchsize" id="23">3 x 1</td>
 <td class="watchclass">double</td>
 <td class="watchcomplex">No</td>
 </tr>
@@ -47,10 +47,17 @@
 <td class="watchclass">double</td>
 <td class="watchcomplex">No</td>
 </tr>
-<tr class="var type1" id="S8T13">
+<tr class="var type1" id="S8T3">
 <td id="blank"></td><td>6</td>
+<td id=""><a href="#">D_TH</a></td>
+<td>Local</td><td class="watchsize" id="4">1 x 1</td>
+<td class="watchclass">double</td>
+<td class="watchcomplex">No</td>
+</tr>
+<tr class="var type1" id="S9T13">
+<td id="blank"></td><td>7</td>
 <td id=""><a href="#">delta</a></td>
-<td>Local</td><td class="watchsize" id="29"><b>:</b>? x 3</td>
+<td>Local</td><td class="watchsize" id="30"><b>:</b>? x 3</td>
 <td class="watchclass">double</td>
 <td class="watchcomplex">No</td>
 </tr>
