--- a/codegen/mex/mog/html/update226_watch.html
+++ b/codegen/mex/mog/html/update226_watch.html
@@ -15,138 +15,124 @@
 <tr class="var type1" id="S2T12">
 <td id="blank"></td><td>1</td>
 <td id=""><a href="#">weight</a></td>
-<td>I/O</td><td class="watchsize" id="22">3 x 1</td>
+<td>I/O</td><td class="watchsize" id="23">3 x 1</td>
 <td class="watchclass">double</td>
 <td class="watchcomplex">No</td>
 </tr>
 <tr class="var type1" id="S3T13">
 <td id="blank"></td><td>2</td>
 <td id=""><a href="#">mu</a></td>
-<td>I/O</td><td class="watchsize" id="29"><b>:</b>? x 3</td>
+<td>I/O</td><td class="watchsize" id="30"><b>:</b>? x 3</td>
 <td class="watchclass">double</td>
 <td class="watchcomplex">No</td>
 </tr>
 <tr class="var type1" id="S4T12">
 <td id="blank"></td><td>3</td>
 <td id=""><a href="#">sigma</a></td>
-<td>I/O</td><td class="watchsize" id="22">3 x 1</td>
+<td>I/O</td><td class="watchsize" id="23">3 x 1</td>
 <td class="watchclass">double</td>
 <td class="watchcomplex">No</td>
 </tr>
 <tr class="var type1" id="S5T26">
 <td id="blank"></td><td>4</td>
 <td id=""><a href="#">X</a></td>
-<td>Input</td><td class="watchsize" id="28"><b>:</b>? x 1</td>
+<td>Input</td><td class="watchsize" id="29"><b>:</b>? x 1</td>
 <td class="watchclass">double</td>
 <td class="watchcomplex">No</td>
 </tr>
 <tr class="var type1" id="S6T3">
 <td id="blank"></td><td>5</td>
-<td id=""><a href="#">K</a></td>
-<td>Local</td><td class="watchsize" id="4">1 x 1</td>
+<td id=""><a href="#">alpha</a></td>
+<td>Input</td><td class="watchsize" id="4">1 x 1</td>
 <td class="watchclass">double</td>
 <td class="watchcomplex">No</td>
 </tr>
-<tr class="var type1" id="S8T3">
+<tr class="var type1" id="S7T3">
 <td id="blank"></td><td>6</td>
-<td id=""><a href="#">C</a></td>
+<td id=""><a href="#">K</a></td>
 <td>Local</td><td class="watchsize" id="4">1 x 1</td>
 <td class="watchclass">double</td>
 <td class="watchcomplex">No</td>
 </tr>
 <tr class="var type1" id="S9T3">
 <td id="blank"></td><td>7</td>
-<td id=""><a href="#">ALPHA</a></td>
+<td id=""><a href="#">C</a></td>
 <td>Local</td><td class="watchsize" id="4">1 x 1</td>
 <td class="watchclass">double</td>
 <td class="watchcomplex">No</td>
 </tr>
 <tr class="var type1" id="S10T3">
 <td id="blank"></td><td>8</td>
-<td id=""><a href="#">D_TH</a></td>
+<td id=""><a href="#">SIGMA0</a></td>
 <td>Local</td><td class="watchsize" id="4">1 x 1</td>
 <td class="watchclass">double</td>
 <td class="watchcomplex">No</td>
 </tr>
 <tr class="var type1" id="S11T3">
 <td id="blank"></td><td>9</td>
-<td id=""><a href="#">SIGMA0</a></td>
-<td>Local</td><td class="watchsize" id="4">1 x 1</td>
-<td class="watchclass">double</td>
-<td class="watchcomplex">No</td>
-</tr>
-<tr class="var type1" id="S12T3">
-<td id="blank"></td><td>10</td>
 <td id=""><a href="#">PRIOR_WEIGHT</a></td>
 <td>Local</td><td class="watchsize" id="4">1 x 1</td>
 <td class="watchclass">double</td>
 <td class="watchcomplex">No</td>
 </tr>
-<tr class="var type1" id="S13T12">
-<td id="blank"></td><td>11</td>
+<tr class="var type1" id="S12T37">
+<td id="blank"></td><td>10</td>
 <td id=""><a href="#">D</a></td>
-<td>Local</td><td class="watchsize" id="22">3 x 1</td>
-<td class="watchclass">double</td>
-<td class="watchcomplex">No</td>
-</tr>
-<tr class="var type1" id="S15T39">
-<td id="blank"></td><td>12</td>
-<td id=""><a href="#">D_in</a></td>
-<td>Local</td><td class="watchsize" id="22">3 x 1</td>
+<td>Local</td><td class="watchsize" id="23">3 x 1</td>
 <td class="watchclass">logical</td>
 <td class="watchcomplex">-</td>
 </tr>
+<tr class="var type1" id="S14T12">
+<td id="blank"></td><td>11</td>
+<td id=""><a href="#">sigmaInv &gt; 1</a></td>
+<td>Local</td><td class="watchsize" id="23">3 x 1</td>
+<td class="watchclass">double</td>
+<td class="watchcomplex">No</td>
+</tr>
+<tr class="var type1" id="S14T28">
+<td id="blank"></td><td>12</td>
+<td id=""><a href="#">sigmaInv &gt; 2</a></td>
+<td>Local</td><td class="watchsize" id="24">3 x 3</td>
+<td class="watchclass">double</td>
+<td class="watchcomplex">No</td>
+</tr>
 <tr class="var type1" id="S16T12">
 <td id="blank"></td><td>13</td>
-<td id=""><a href="#">sigmaInv &gt; 1</a></td>
-<td>Local</td><td class="watchsize" id="22">3 x 1</td>
-<td class="watchclass">double</td>
-<td class="watchcomplex">No</td>
-</tr>
-<tr class="var type1" id="S16T28">
-<td id="blank"></td><td>14</td>
-<td id=""><a href="#">sigmaInv &gt; 2</a></td>
-<td>Local</td><td class="watchsize" id="23">3 x 3</td>
-<td class="watchclass">double</td>
-<td class="watchcomplex">No</td>
-</tr>
-<tr class="var type1" id="S18T12">
-<td id="blank"></td><td>15</td>
 <td id=""><a href="#">det_Q</a></td>
-<td>Local</td><td class="watchsize" id="22">3 x 1</td>
+<td>Local</td><td class="watchsize" id="23">3 x 1</td>
 <td class="watchclass">double</td>
 <td class="watchcomplex">No</td>
 </tr>
-<tr class="var type1" id="S19T13">
-<td id="blank"></td><td>16</td>
+<tr class="var type1" id="S17T13">
+<td id="blank"></td><td>14</td>
 <td id=""><a href="#">X_rep</a></td>
-<td>Local</td><td class="watchsize" id="29"><b>:</b>? x 3</td>
+<td>Local</td><td class="watchsize" id="30"><b>:</b>? x 3</td>
 <td class="watchclass">double</td>
 <td class="watchcomplex">No</td>
 </tr>
-<tr class="var type1" id="S20T13">
-<td id="blank"></td><td>17</td>
+<tr class="var type1" id="S18T13">
+<td id="blank"></td><td>15</td>
 <td id=""><a href="#">nu</a></td>
-<td>Local</td><td class="watchsize" id="29"><b>:</b>? x 3</td>
+<td>Local</td><td class="watchsize" id="30"><b>:</b>? x 3</td>
 <td class="watchclass">double</td>
 <td class="watchcomplex">No</td>
 </tr>
-<tr class="var type1" id="S21T12">
-<td id="blank"></td><td>18</td>
+<tr class="var type1" id="S19T12">
+<td id="blank"></td><td>16</td>
 <td id=""><a href="#">rho</a></td>
-<td>Local</td><td class="watchsize" id="22">3 x 1</td>
+<td>Local</td><td class="watchsize" id="23">3 x 1</td>
 <td class="watchclass">double</td>
 <td class="watchcomplex">No</td>
 </tr>
-<tr class="var type1" id="S25T13">
-<td id="blank"></td><td>19</td>
+<tr class="var type1" id="S23T13">
+<td id="blank"></td><td>17</td>
 <td id=""><a href="#">rho_rep</a></td>
-<td>Local</td><td class="watchsize" id="29"><b>:</b>? x 3</td>
+<td>Local</td><td class="watchsize" id="30"><b>:</b>? x 3</td>
 <td class="watchclass">double</td>
 <td class="watchcomplex">No</td>
 </tr>
-<tr class="var type1" id="S29T3">
-<td id="blank"></td><td>20</td>
+<tr class="var type1" id="S27T3">
+<td id="blank"></td><td>18</td>
 <td id=""><a href="#">index</a></td>
 <td>Local</td><td class="watchsize" id="4">1 x 1</td>
 <td class="watchclass">double</td>
